tests/baselines/reference/invalidUndefinedAssignments.errors.txt
==== tests/cases/conformance/types/primitives/undefined/invalidUndefinedAssignments.ts (6 errors) ====
    var x: typeof undefined;
    
    enum E { A }
    E = x;
    ~
!!! error TS2364: Invalid left-hand side of assignment expression.
    E.A = x;
    ~~~
!!! error TS2364: Invalid left-hand side of assignment expression.
    
    class C { foo: string }
    var f: C;
    C = x;
    ~
!!! error TS2364: Invalid left-hand side of assignment expression.
    
    interface I { foo: string }
    var g: I;
    g = x;
    I = x;
    ~
!!! error TS2304: Cannot find name 'I'.
    
    module M { export var x = 1; }
    M = x;
    ~
!!! error TS2364: Invalid left-hand side of assignment expression.
    
    function i<T>(a: T) { }
    // BUG 767030
    i = x; 
    ~
!!! error TS2364: Invalid left-hand side of assignment expression.